Remove conf vscode and copilot settings

--- a/.gitignore
+++ b/.gitignore
@@ -143,3 +143,8 @@ __blobstorage__
 __queuestorage__
 __azurite_db*__.json
 .python_packages
+
+# VS Code settings
+.vscode/
+
+# Github copilot settings
